--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
 		<greenmail.version>1.3.1b</greenmail.version>
 
 		<!-- Plugin的属性定义 -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<jdk.version>1.8</jdk.version>
 
 		<!-- 数据库连接属性 -->
